--- a/SaveSettingsApp/SaveSettingsApp.csproj
+++ b/SaveSettingsApp/SaveSettingsApp.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\1. JSONFilesManipulation\JSONFilesManipulation.csproj" />
+  </ItemGroup>
+
 </Project>
