--- a/SaveSettingsApp/JSONFilesManager.csproj
+++ b/SaveSettingsApp/JSONFilesManager.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\1. JSONFilesManipulation\JSONFilesManipulation.csproj" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
 </Project>
