Simplified JSON operation
Simplified JSON operation by using JSONFilesManager2 class and, mainly SettingsManager

--- a/JSONFilesManagerTests/JSONFilesManagerTests.csproj
+++ b/JSONFilesManagerTests/JSONFilesManagerTests.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SaveSettingsApp\JSONFilesManager.csproj" />
+    <ProjectReference Include="..\SaveSettingsApp\JSONFilesManagerProj.csproj" />
   </ItemGroup>
 
 </Project>
